feat(agent): LangChain Agents（create_agent）と gpt-4o-mini を統合し、スレッド返信に対応
- config: OpenAISettings を追加（OPENAI_API_KEY / OPENAI_MODEL）
- agent: create_agent によるエージェントグラフを実装（LRUキャッシュ）
- handlers/message: invoke_agent を呼び出し、スレッドに応答
- tests: エージェントの非同期テストを追加（pytest-asyncio）
- docs: README を更新（OpenAI設定/予算上限）、agent.py.exp.md 追加、message.py.exp.md / config.py.exp.md を更新
- AGENTS.md / story: Phase 2〜4 の更新内容を反映

BREAKING CHANGE: 固定の hello 応答から、LLM（gpt-4o-mini）による動的応答に変更

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ requires-python = ">=3.12"
 dependencies = [
     "slack-bolt>=1.18.0,<2.0.0",
     "python-dotenv>=1.0.0,<2.0.0",
+    "langchain-core>=1.0.3",
+    "langchain-openai>=1.0.2",
+    "langchain>=1.0.4",
 ]
 
 [project.scripts]
@@ -45,5 +48,6 @@ exclude = [".venv"]
 dev = [
     "mypy>=1.18.2",
     "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
     "ruff>=0.14.3",
 ]
