feat(semche): MCP クライアント（stdio）と検索ツールを追加、Phase 4 ドキュメント更新、テストと lint 修正

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,26 @@
 # Copy to .env and fill in your tokens
+
+# --- Slack App ---
 # Slack Bot User OAuth Token (starts with xoxb-)
 SLACK_BOT_TOKEN=
 # Slack App Level Token for Socket Mode (starts with xapp-)
 SLACK_APP_TOKEN=
+
+# --- OpenAI ---
+# Get your API key from https://platform.openai.com/
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
+
+# --- Semche MCP (stdio) ---
+# Path to Semche MCP workspace directory OR server script path.
+# If a directory is provided, the client runs: uv run python <path>/src/semche/mcp_server.py
+MCP_SEMCHE_PATH=
+
+# Timeout (seconds) for MCP calls
+MCP_SEMCHE_TIMEOUT=10
+
+# ChromaDB persist directory used by Semche server (exported to server process)
+SEMCHE_CHROMA_DIR=
+
+# Development: return mocked search results when set to "1"
+SEMCHE_MOCK=0
