--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain-core>=1.0.3",
     "langchain-openai>=1.0.2",
     "langchain>=1.0.4",
+    "mcp[cli]>=1.20.0",
 ]
 
 [project.scripts]
