--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ SLACK_APP_TOKEN=
 # --- OpenAI ---
 # Get your API key from https://platform.openai.com/
 OPENAI_API_KEY=
-OPENAI_MODEL=gpt-4o-mini
+OPENAI_MODEL=gpt-5-nano
 
 # --- Semche MCP (stdio) ---
 # Path to Semche MCP workspace directory OR server script path.
