feat(agent,docs): MCPツール自動ロードの簡素化とドキュメント整備
- agent: load_mcp_tools_once を整理
  - MCP_SEMCHE_PATH をディレクトリ必須に変更（ファイル指定は不可）
  - uv --directory <MCP_SEMCHE_PATH> python src/semche/mcp_server.py で起動を統一
  - getenv/timeout/env の冗長処理を削減し safe_timeout を導入
  - ツール0件/初期化失敗/アダプタ未導入時は RuntimeError（フォールバック無し）
- tests: 新仕様に合わせて stdio 側の isdir/exists をモック、全19件PASS
- README: MCP 自動ロードセクションを刷新（環境変数テーブル、起動方法、エラー表、メモ化、stdioのみ）
- agent.py.exp.md: ディレクトリ必須・起動コマンド・timeout正規化・エラー条件を明記
- AGENTS.md: READMEチェックリストと開発者向けコマンド早見表を追記

BREAKING CHANGE: MCP_SEMCHE_PATH にファイルパスを指定する運用は非対応になりました

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ OPENAI_API_KEY=
 OPENAI_MODEL=gpt-5-nano
 
 # --- Semche MCP (stdio) ---
-# Path to Semche MCP workspace directory OR server script path.
+# Path to Semche MCP workspace directory.
 # If a directory is provided, the client runs: uv run python <path>/src/semche/mcp_server.py
 MCP_SEMCHE_PATH=
 
