--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langchain-openai>=1.0.2",
     "langchain>=1.0.4",
     "mcp[cli]>=1.20.0",
+    "langchain-mcp-adapters>=0.1.0",
 ]
 
 [project.scripts]
